--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,9 @@ body {
   color: #434455;
 }
 
-*,
-
-  /* outline: 2px solid coral; */
-
+* {
+  outline: 2px solid coral;
+}
 
 /* ----------- components --------- */
 h1,
@@ -109,9 +108,12 @@ img {
 
 /* ----------- header ------------ */
 .header-box {
+  padding: 0 15px;
+}
+nav.transform,
+.adress {
   padding: 24px 0;
 }
-
 .header .logo {
   margin-right: 76px;
 }
@@ -293,11 +295,9 @@ img {
 .footer-box > .logo {
   display: inline-block;
   margin-bottom: 16px;
+  padding-top: 100px;
 }
 
-.footer-box {
-  padding: 100px 0;
-}
 .footer-desc {
   font-size: 16px;
   line-height: 1.5;
@@ -305,6 +305,8 @@ img {
 
   color: var(--footer-text-colour);
   max-width: 264px;
+
+  padding-bottom: 100px;
 }
 
 /* =========== PORTFOLIO ============= */
