--- a/css/style.css
+++ b/css/style.css
@@ -289,8 +289,8 @@ img {
 
   padding-left: 15px;
 }
-.footer .logo {
-  padding-top: 100px;
+.footer {
+  padding: 100px 0;
 }
 .logo-footer {
   color: var(--footer-text-colour);
@@ -307,8 +307,6 @@ img {
 
   color: var(--footer-text-colour);
   max-width: 264px;
-
-  padding-bottom: 100px;
 }
 
 /* =========== PORTFOLIO ============= */
