--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,9 @@ body {
   color: #434455;
 }
 
-* {
+/* * {
   outline: 2px solid coral;
-}
+} */
 
 /* ----------- components --------- */
 h1,
@@ -327,12 +327,13 @@ img {
   color: var(--button-colour);
   background-color: var(--section-background-colour);
 
-  border: solid var(--border-color);
+  border: 1px solid var(--border-color);
 }
 .filter-button:hover,
 .filter-button:focus {
   color: var(--white-text-colour);
   background-color: var(--accent-colour);
+  border: 1px solid transparent;
 }
 .filter-button {
   padding: 12px 24px;
@@ -363,10 +364,9 @@ img {
   width: 360px;
 }
 .card-content {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
-  padding: 0 -1px;
+  padding: 32px 16px;
+  border: 1px solid var(--border-color);
+  border-top: none;
 }
 .name-working {
   margin-bottom: 8px;
